--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^6.0.1",
     "sass": "^1.86.0",
-    "sort-css-media-queries": "^3.0.0"
+    "sort-css-media-queries": "2.4.0"
   }
 }
